--- a/restaurant-page/package.json
+++ b/restaurant-page/package.json
@@ -1,15 +1,24 @@
 {
-  "name": "restaurant-page",
+  "name": "restaurant",
   "version": "1.0.0",
-  "description": "A restaurant page created as a learning exercise for The Odin Project.",
+  "private": true,
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack  --config webpack.config.js"
   },
+  "keywords": [],
   "author": "Daniel Winters",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^6.7.1",
+    "style-loader": "^3.3.1",
     "webpack": "^5.72.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.8.1",
+    "webpack-merge": "^5.8.0"
+  },
+  "dependencies": {
+    "clean-webpack-plugin": "^4.0.0"
   }
 }
